--- a/app/src/main/res/layout/fragment_registration.xml
+++ b/app/src/main/res/layout/fragment_registration.xml
@@ -175,6 +175,7 @@
         android:text="@string/user_registration_MFA_enrollment"
         android:textColor="@color/purple_500"
         android:textSize="12sp"
+        android:checked="false"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
