--- a/app/src/main/res/layout/fragment_edit_group_info.xml
+++ b/app/src/main/res/layout/fragment_edit_group_info.xml
@@ -66,50 +66,60 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:padding="10dp"
-
-                android:text="Group name:"
-
-                />
-
-            <EditText
-                android:id="@+id/edit_group_name"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:ems="10"
-                android:hint="Name"
-                android:background="@drawable/round_corner"
-                android:inputType="textPersonName"
-                android:minHeight="48dp"
-                android:padding="10dp"
+                android:text="Batch"
+                android:gravity="center"
+                android:textSize="30sp"
                 android:textStyle="bold"
 
                 />
-        </LinearLayout>
 
+<!--            <EditText-->
+<!--                android:id="@+id/edit_group_name"-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:ems="10"-->
+<!--                android:hint="edit group name"-->
+<!--                android:background="@drawable/round_corner"-->
+<!--                android:textColor="@color/gray"-->
+<!--                android:inputType="textPersonName"-->
+<!--                android:minHeight="48dp"-->
+<!--                android:padding="10dp"-->
+<!--                />-->
+
+        </LinearLayout>
+        <View
+            android:id="@+id/horizontal_bar"
+            android:layout_width="wrap_content"
+            android:layout_height="1dp"
+            android:background="@color/horizontal_line"
+            android:layout_marginTop="30dp"
+            />
 
         <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp">
 
             <TextView
                 android:id="@+id/group_tags"
-                android:layout_width="360dp"
-                android:layout_height="41dp"
-                android:layout_marginStart="25dp"
+                android:layout_width="357dp"
+                android:layout_height="43dp"
                 android:padding="10dp"
                 android:text="Tags:"
+                android:textSize="20sp"
+                android:textStyle="bold"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 tools:ignore="MissingConstraints"
                 tools:layout_editor_absoluteY="0dp" />
 
             <EditText
                 android:id="@+id/editText_add_tag"
-                android:layout_width="wrap_content"
-                android:layout_height="40dp"
+                android:layout_width="265dp"
+                android:layout_height="41dp"
+                android:background="@drawable/round_corner"
                 android:ems="10"
                 android:hint="add tag"
-                android:background="@drawable/round_corner"
                 android:inputType="textPersonName"
                 android:padding="10dp"
                 app:layout_constraintStart_toEndOf="@+id/add_tag"
@@ -124,13 +134,13 @@
                 android:backgroundTintMode="add"
                 app:icon="@drawable/add_icon"
                 app:iconTint="#312B28"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="@+id/group_tags"
                 app:layout_constraintTop_toBottomOf="@+id/group_tags" />
 
-
             <com.google.android.material.chip.ChipGroup
                 android:id="@+id/tag_group_chip"
-
                 android:layout_width="357dp"
                 android:layout_height="0dp"
                 android:layout_marginTop="16dp"
@@ -142,9 +152,15 @@
             </com.google.android.material.chip.ChipGroup>
 
 
+
         </androidx.constraintlayout.widget.ConstraintLayout>
 
-
+        <View
+            android:layout_width="wrap_content"
+            android:layout_height="1dp"
+            android:background="@color/horizontal_line"
+            android:layout_marginTop="30dp"
+            tools:ignore="MissingConstraints" />
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -155,16 +171,18 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="About us:"
-                android:layout_marginTop="30dp"
+                android:textStyle="bold"
+                android:textSize="20sp"
+                android:layout_marginTop="20dp"
                 android:padding="10dp"
+                android:layout_marginBottom="10sp"
 
                 />
 
             <EditText
-                android:id="@+id/edit_group_about_us"
+                android:id="@+id/about_us"
                 android:layout_width="match_parent"
                 android:layout_height="219dp"
-
                 android:background="@drawable/round_corner"
                 android:ems="10"
                 android:gravity="start|top"
@@ -172,14 +190,43 @@
                 android:minHeight="48dp"
                 android:padding="10dp" />
 
-            <Button
-                android:id="@+id/btn_create_group"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Create"
-                android:layout_marginTop="30dp"
-                android:layout_marginBottom="30dp"/>
+
+        </LinearLayout>
+        <View
+            android:layout_width="wrap_content"
+            android:layout_height="1dp"
+            android:background="@color/horizontal_line"
+            android:layout_marginTop="30dp"
+            tools:ignore="MissingConstraints" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:theme="@style/page_margin">
+        <TextView
+            android:id="@+id/users"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Users:"
+            android:textStyle="bold"
+            android:textSize="20sp"
+            android:layout_marginTop="20dp"
+            android:padding="10dp"
+            android:layout_marginBottom="10sp"
+
+            />
+    </LinearLayout>
+
+
+
+            <!--            <Button-->
+<!--                android:id="@+id/btn_create_group"-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:text="Create"-->
+<!--                android:layout_marginTop="30dp"-->
+<!--                android:layout_marginBottom="30dp"/>-->
         </LinearLayout>
 
-    </LinearLayout>
+
 </ScrollView>
