--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -55,8 +55,8 @@
             android:id="@+id/to_groupCreationFragment"
             app:destination="@id/groupCreationFragment" />
         <action
-            android:id="@+id/action_myGroupFragment_to_editGroupProfile"
-            app:destination="@id/editGroupProfile" />
+            android:id="@+id/action_myGroupFragment_to_viewGroupInfoFragment"
+            app:destination="@id/viewGroupInfoFragment" />
     </fragment>
     <!-- other group tab fragment -->
     <fragment
@@ -116,7 +116,11 @@
         android:id="@+id/editGroupProfile"
         android:name="com.example.batchtest.myGroupsTab.EditGroupProfile"
         android:label="fragment_edit_group_profile"
-        tools:layout="@layout/fragment_edit_group_profile" />
+        tools:layout="@layout/fragment_edit_group_profile" >
+        <action
+            android:id="@+id/action_editGroupProfile_to_myGroupFragment"
+            app:destination="@id/myGroupFragment" />
+    </fragment>
     <fragment
         android:id="@+id/editProfileFragment"
         android:name="com.example.batchtest.EditProfileFragment"
@@ -125,6 +129,19 @@
         <action
             android:id="@+id/action_editProfileFragment_to_userProfileTabFragment"
             app:destination="@id/userProfileTabFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/viewGroupInfoFragment"
+        android:name="com.example.batchtest.EditGroupProfile.ViewGroupInfoFragment"
+        android:label="ViewGroupInfoFragment"
+        tools:layout="@layout/fragment_view_group_info"
+        >
+        <action
+            android:id="@+id/action_viewGroupInfoFragment_to_editGroupProfile"
+            app:destination="@id/editGroupProfile" />
+        <action
+            android:id="@+id/action_viewGroupInfoFragment_to_myGroupFragment"
+            app:destination="@id/myGroupFragment" />
     </fragment>
 
 </navigation>
