--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,4 +1,9 @@
 <resources>
     <dimen name="text_margin">16dp</dimen>
     <dimen name="enlarge_text_size">15sp</dimen>
+
+    <dimen name="progress_dialog_padding">10dp</dimen>
+    <dimen name="progress_bar_size">50dp</dimen>
+    <dimen name="progress_bar_text_marginStart">16dp</dimen>
+    <dimen name="progress_bar_text_size">16sp</dimen>
 </resources>
