--- a/app/src/main/res/layout/my_group_list.xml
+++ b/app/src/main/res/layout/my_group_list.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@color/app_background"
+    android:id="@+id/group_card_view"
     android:backgroundTint="@color/app_background">
 
     <LinearLayout
