--- a/app/src/main/res/layout/matched_group_recycler_view_row.xml
+++ b/app/src/main/res/layout/matched_group_recycler_view_row.xml
@@ -6,6 +6,7 @@
     android:layout_height="wrap_content">
 
     <androidx.cardview.widget.CardView
+        android:id="@+id/matched_group_recycler_view_row_card_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
@@ -13,7 +14,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="5dp"
         app:cardBackgroundColor="@color/cardview_light_background"
-        app:cardCornerRadius="20dp"
+        app:cardCornerRadius="0dp"
         app:cardElevation="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
