--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -142,6 +142,12 @@
         <action
             android:id="@+id/action_viewGroupInfoFragment_to_myGroupFragment"
             app:destination="@id/myGroupFragment" />
+        <argument
+            android:name="groupName"
+            app:argType="string" />
+        <argument
+            android:name="groupDesc"
+            app:argType="string" />
     </fragment>
 
 </navigation>
