--- a/app/src/main/res/layout/fragment_edit_profile.xml
+++ b/app/src/main/res/layout/fragment_edit_profile.xml
@@ -95,29 +95,29 @@
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/et_email"
-           app:layout_constraintStart_toStartOf="@id/et_birthday"
+           app:layout_constraintStart_toStartOf="@id/btn_birthday"
            android:text="Birthday"
            />
-       <EditText
-           android:id="@+id/et_birthday"
+       <Button
+           android:id="@+id/btn_birthday"
            android:layout_width="match_parent"
-           android:layout_height="25dp"
+           android:layout_height="40dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="25dp"
+           android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/tv_birthday"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textSize="20sp"
-           android:background="@drawable/round_corner"
-           tools:text = "birthday"/>
+           android:background="@drawable/round_corner" />
 
        <TextView
            android:id="@+id/tv_firstName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
-           app:layout_constraintTop_toBottomOf="@id/et_birthday"
+           app:layout_constraintTop_toBottomOf="@id/btn_birthday"
            app:layout_constraintBottom_toTopOf="@id/et_first_name"
            app:layout_constraintStart_toStartOf="@id/et_first_name"
            android:text="First Name"
@@ -230,23 +230,24 @@
            app:layout_constraintTop_toBottomOf="@id/rg_gender"
            app:layout_constraintStart_toStartOf="@id/et_bio"
            />
+
        <EditText
            android:id="@+id/et_bio"
            android:layout_width="match_parent"
            android:layout_height="150dp"
-           app:layout_constraintTop_toBottomOf="@id/tv_personalBio"
-           app:layout_constraintStart_toStartOf="parent"
-           app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
-           android:layout_marginBottom="25dp"
            android:background="@drawable/round_corner"
-           android:textSize="20sp"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            android:minHeight="48dp"
            android:padding="10dp"
-           tools:text = "Personal Bio"/>
+           android:textSize="20sp"
+           app:layout_constraintEnd_toEndOf="parent"
+           app:layout_constraintHorizontal_bias="1.0"
+           app:layout_constraintStart_toStartOf="parent"
+           app:layout_constraintTop_toBottomOf="@id/tv_personalBio"
+           tools:text="Personal Bio" />
 
        <Button
            android:id="@+id/btn_update_profile"
