--- a/app/src/main/res/layout/fragment_match_tab.xml
+++ b/app/src/main/res/layout/fragment_match_tab.xml
@@ -15,4 +15,12 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/app_background"/>
+    <!--    display message that user needse to join a group-->
+    <TextView
+        android:id="@+id/match_tab_message"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:textSize="20sp"
+        android:textAlignment="center"/>
 </RelativeLayout>
