--- a/app/src/main/res/layout/match_group_card.xml
+++ b/app/src/main/res/layout/match_group_card.xml
@@ -20,10 +20,10 @@ used to populate the cardStackView recycler -->
                 android:layout_height="25dp"
                 android:background="@drawable/undo"
                 android:layout_marginEnd="8dp"
-                android:fillColor="@color/black"
                 android:contentDescription="@string/undo_button"
                 android:layout_toStartOf="@id/match_more_btn"
-                android:layout_marginVertical="15dp"/>
+                android:layout_marginVertical="15dp"
+                android:alpha=".1"/>
             <ImageButton
                 android:id="@+id/match_more_btn"
                 android:layout_width="25dp"
