--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -13,7 +13,7 @@
         <item name="android:statusBarColor" >?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
         <item name="android:fontFamily">@font/karla</item>
-        <item name="android:textColor">#070707</item>
+        <item name="android:textColor">@color/text_color</item>
     </style>
 
     <!--    title for every page-->
@@ -32,7 +32,7 @@
 <!--   regular font for page text-->
     <style name="page_text" parent="" >
         <item name="android:fontFamily">@font/karla</item>
-        <item name="android:textColor">#070707</item>
+        <item name="android:textColor">@color/text_color</item>
         <item name="android:textSize">18sp</item>
     </style>
 
