--- a/app/src/main/res/layout/fragment_join_group.xml
+++ b/app/src/main/res/layout/fragment_join_group.xml
@@ -56,17 +56,24 @@
         />
 
     <SearchView
-        android:id="@+id/search_group_btn"
+        android:id="@+id/search_group"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:queryHint="Search for groups"
         android:layout_marginTop="50dp"
         android:layout_marginStart="30dp"
         android:layout_marginEnd="30dp"
-        android:layout_marginBottom="50dp"
+
         android:background="@drawable/round_corner"
 
         />
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recycleView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="10dp"
+            android:layout_marginStart="30dp"
+            />
 
         <TextView
             android:layout_width="match_parent"
