--- a/app/src/main/res/layout/matched_group_recycler_view_row.xml
+++ b/app/src/main/res/layout/matched_group_recycler_view_row.xml
@@ -7,12 +7,12 @@
 
     <androidx.cardview.widget.CardView
         android:id="@+id/matched_group_recycler_view_row_card_view"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="15dp"
+        android:layout_marginTop="3dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginBottom="5dp"
+        android:layout_marginBottom="3dp"
         app:cardBackgroundColor="@color/cardview_light_background"
         app:cardCornerRadius="0dp"
         app:cardElevation="8dp"
@@ -28,7 +28,7 @@
             <ImageView
                 android:id="@+id/matched_group_recycler_view_row_group_photo"
                 android:layout_width="100dp"
-                android:layout_height="100dp"
+                android:layout_height="80dp"
                 android:contentDescription="TODO"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
