--- a/app/src/main/res/layout/interest_tag.xml
+++ b/app/src/main/res/layout/interest_tag.xml
@@ -4,9 +4,11 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    android:id="@+id/chip_tag"
     android:background="@drawable/rounded_tag"
     android:fontFamily="@font/karla"
     android:paddingHorizontal="10dp"
     android:paddingVertical="5dp"
+    android:layout_marginStart="5dp"
     android:textColor="@color/black"
     android:textSize="11sp"/>
