--- a/app/src/main/res/layout/vote_group_card.xml
+++ b/app/src/main/res/layout/vote_group_card.xml
@@ -8,7 +8,7 @@
     android:layout_margin="7dp"
     app:cardCornerRadius="5dp"
     app:cardElevation="0dp"
-    app:cardBackgroundColor="@color/background_text">
+    app:cardBackgroundColor="@color/off_white">
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
