--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -66,7 +66,11 @@
         android:id="@+id/otherGroupTabFragment"
         android:name="com.example.batchtest.OtherGroupsTab.OtherGroupTabFragment"
         android:label="fragment_match_tab"
-        tools:layout="@layout/fragment_match_tab"/>
+        tools:layout="@layout/fragment_match_tab">
+        <action
+            android:id="@+id/action_otherGroupTabFragment_to_groupChatFragment"
+            app:destination="@id/groupChatFragment" />
+    </fragment>
     <fragment
         android:id="@+id/initialProfilePersonalizationFragment"
         android:name="com.example.batchtest.InitialProfilePersonalizationFragment"
@@ -161,5 +165,9 @@
             android:id="@+id/action_joinGroupFragment_to_myGroupFragment"
             app:destination="@id/myGroupFragment" />
     </fragment>
+    <fragment
+        android:id="@+id/groupChatFragment"
+        android:name="com.example.batchtest.GroupChat.GroupChatFragment"
+        android:label="GroupChatFragment" />
 
 </navigation>
