--- a/app/src/main/res/layout/fragment_edit_group_info.xml
+++ b/app/src/main/res/layout/fragment_edit_group_info.xml
@@ -94,32 +94,29 @@
             android:background="@color/horizontal_line"
             android:layout_marginTop="30dp"
             />
-
         <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp">
 
             <TextView
                 android:id="@+id/group_tags"
-                android:layout_width="357dp"
-                android:layout_height="43dp"
+                android:layout_width="360dp"
+                android:layout_height="41dp"
+                android:layout_marginStart="25dp"
                 android:padding="10dp"
                 android:text="Tags:"
-                android:textSize="20sp"
-                android:textStyle="bold"
-                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 tools:ignore="MissingConstraints"
                 tools:layout_editor_absoluteY="0dp" />
 
             <EditText
                 android:id="@+id/editText_add_tag"
-                android:layout_width="265dp"
-                android:layout_height="41dp"
-                android:background="@drawable/round_corner"
+                android:layout_width="wrap_content"
+                android:layout_height="40dp"
                 android:ems="10"
                 android:hint="add tag"
+                android:background="@drawable/round_corner"
                 android:inputType="textPersonName"
                 android:padding="10dp"
                 app:layout_constraintStart_toEndOf="@+id/add_tag"
@@ -134,13 +131,13 @@
                 android:backgroundTintMode="add"
                 app:icon="@drawable/add_icon"
                 app:iconTint="#312B28"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="@+id/group_tags"
                 app:layout_constraintTop_toBottomOf="@+id/group_tags" />
 
+
             <com.google.android.material.chip.ChipGroup
                 android:id="@+id/tag_group_chip"
+
                 android:layout_width="357dp"
                 android:layout_height="0dp"
                 android:layout_marginTop="16dp"
@@ -152,8 +149,49 @@
             </com.google.android.material.chip.ChipGroup>
 
 
-
         </androidx.constraintlayout.widget.ConstraintLayout>
+<!--        <androidx.constraintlayout.widget.ConstraintLayout-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_marginTop="20dp">-->
+
+<!--            <Button-->
+<!--                android:id="@+id/group_tags"-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:padding="20dp"-->
+<!--                android:backgroundTint="@color/background_text"-->
+<!--                android:drawableEnd="@drawable/edit_profile"-->
+<!--                android:fontFamily="@font/karla"-->
+<!--                android:textAppearance="@style/TextAppearance.AppCompat.Body1"-->
+<!--                android:text="Set Tags"-->
+<!--                android:textAlignment="viewStart"-->
+<!--                android:textStyle="bold"-->
+<!--                android:textColor="@color/black"-->
+<!--                android:textSize="20sp"-->
+<!--                android:layout_marginStart="20dp"-->
+<!--                android:layout_marginEnd="20dp"-->
+<!--                app:cornerRadius="10dp"-->
+<!--                android:stateListAnimator="@null"-->
+<!--                app:layout_constraintEnd_toEndOf="parent"-->
+<!--                app:layout_constraintStart_toStartOf="parent"-->
+<!--                tools:ignore="MissingConstraints"-->
+<!--                tools:layout_editor_absoluteY="0dp" />-->
+
+<!--            <com.google.android.material.chip.ChipGroup-->
+<!--                android:id="@+id/tag_group_chip"-->
+<!--                android:layout_width="357dp"-->
+<!--                android:layout_height="0dp"-->
+<!--                android:layout_marginTop="16dp"-->
+<!--                app:layout_constraintEnd_toEndOf="@+id/group_tags"-->
+<!--                app:layout_constraintHorizontal_bias="0.0"-->
+<!--                app:layout_constraintStart_toStartOf="@+id/group_tags"-->
+<!--                app:layout_constraintTop_toBottomOf="@+id/group_tags">-->
+
+
+<!--            </com.google.android.material.chip.ChipGroup>-->
+
+<!--        </androidx.constraintlayout.widget.ConstraintLayout>-->
 
         <View
             android:layout_width="wrap_content"
@@ -166,6 +204,9 @@
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:theme="@style/page_margin">
+
+
+
             <TextView
                 android:id="@+id/group_about_us"
                 android:layout_width="match_parent"
