--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,4 +6,5 @@
     <dimen name="progress_bar_size">50dp</dimen>
     <dimen name="progress_bar_text_marginStart">16dp</dimen>
     <dimen name="progress_bar_text_size">16sp</dimen>
+    <dimen name="dialog_height">800dp</dimen>
 </resources>
