--- a/app/src/main/res/layout/me_message_recycler_view_row.xml
+++ b/app/src/main/res/layout/me_message_recycler_view_row.xml
@@ -25,7 +25,7 @@
         android:id="@+id/card_gchat_message_me"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:cardBackgroundColor="#774df2"
+        app:cardBackgroundColor="@color/black"
         app:cardCornerRadius="12dp"
         app:cardElevation="0dp"
         app:cardPreventCornerOverlap="false"
