--- a/app/src/main/res/layout/list_item_user.xml
+++ b/app/src/main/res/layout/list_item_user.xml
@@ -25,12 +25,12 @@
                 android:layout_width="65dp"
                 android:layout_height="50dp"
                 android:layout_marginBottom="10dp"
-                android:clickable="true"
+                android:clickable="false"
                 android:scaleType="centerCrop"
                 android:src="@drawable/one_direction_photo"
                 app:civ_border_color="#FF000000"
                 android:focusable="true" />
-=
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -40,8 +40,8 @@
                     android:id="@+id/user_name"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="20dp"
-                    android:text="user name"
+                    android:layout_marginStart="20dp"
+                    android:text="no name"
                     android:layout_marginTop="20dp"
                    />
 
