--- a/app/src/main/res/layout/list_item_user.xml
+++ b/app/src/main/res/layout/list_item_user.xml
@@ -1,6 +1,5 @@
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<androidx.cardview.widget.CardView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@color/app_background"
@@ -10,59 +9,37 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:backgroundTint="@color/app_background">
-
-        <LinearLayout
+        android:orientation="vertical">
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginTop="10dp"
-            android:orientation="horizontal"
-            >
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:backgroundTint="@color/app_background">
 
             <de.hdodenhof.circleimageview.CircleImageView
                 android:id="@+id/user_profile"
                 android:layout_width="65dp"
                 android:layout_height="50dp"
-                android:layout_marginBottom="10dp"
                 android:clickable="false"
                 android:scaleType="centerCrop"
-                android:src="@drawable/one_direction_photo"
-                app:civ_border_color="#FF000000"
-                android:focusable="true" />
-
-            <LinearLayout
+                android:focusable="true"
+                android:layout_marginHorizontal="8dp"/>
+            <TextView
+                android:id="@+id/user_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical">
-
-                <TextView
-                    android:id="@+id/user_name"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="20dp"
-                    android:text="no name"
-                    android:layout_marginTop="20dp"
-                   />
-
-<!--                <TextView-->
-<!--                    android:id="@+id/display_name"-->
-<!--                    android:layout_width="match_parent"-->
-<!--                    android:layout_height="wrap_content"-->
-<!--                    android:layout_marginLeft="20dp"-->
-<!--                    android:layout_marginTop="10dp"-->
-<!--                    android:text="display name"-->
-<!--                    android:textColor="@color/purple_500" />-->
-            </LinearLayout>
-        </LinearLayout>
-
+                android:text="no name"
+                android:layout_toEndOf="@id/user_profile"
+                android:layout_centerVertical="true"/>
+        </RelativeLayout>
         <View
             android:id="@+id/horizontal_bar"
             android:layout_width="wrap_content"
             android:layout_height="1dp"
-            android:background="@color/horizontal_line" />
-
+            android:background="@color/horizontal_line"
+            android:layout_marginVertical="10dp"/>
     </LinearLayout>
+
 
 
 </androidx.cardview.widget.CardView>
