pass current fragment name to group chat to identify which fragment it came from

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -193,6 +193,9 @@
         <argument
             android:name="groupName"
             app:argType="string" />
+        <argument
+            android:name="currentFragmentName"
+            app:argType="string" />
     </fragment>
     <fragment
         android:id="@+id/previewGroupInfoFragment"
